Version 1.1.8 (released ??-???-????)

  * fix slowness triggered by allow_compress=1 configuration (issue #467)

Version 1.1.7 (released 09-Sep-2010)

  * display Subversion revision properties in the revision view (issue #453)
  * fix exception in 'standalone.py -r REPOS' when run without a config file
  * fix standalone.py server root deployments (--script-alias='')
  * add rudimentary Basic authentication support to standalone.py (issue #49)
  * fix obscure "unexpected NULL parent pool" Subversion bindings error
  * enable path info / link display in remote Subversion root revision view
  * fix vhost name case handling inconsistency (issue #466)
  * use svn:mime-type property charset param as encoding hint
  * markup Subversion revision references in log messages (issue #313)
  * add rudimentary support for FastCGI-based deployments (issue #464)
  * fix query script WSGI deployment
  * add configuration to fix query script cross-linking to ViewVC

Version 1.1.6 (released 02-Jun-2010)

  * add rudimentary support for WSGI-based deployments (issue #397)
  * fix exception caused by trying to HTML-escape non-string data (issue #454)
  * fix incorrect RSS feed Content-Type header (issue #449)
  * fix RSS <title> encoding problem (issue #451)
  * allow 'svndbadmin purge' to work on missing repositories (issue #452)

Version 1.1.5 (released 29-Mar-2010)

  * security fix: escape user-provided search_re input to avoid XSS attack

Version 1.1.4 (released 10-Mar-2010)

  * security fix: escape user-provided query form input to avoid XSS attack
  * fix standalone.py failure (when per-root options aren't used) (issue #445)
  * fix annotate failure caused by ignored svn_config_dir (issue #447)

Version 1.1.3 (released 22-Dec-2009)

  * security fix: add root listing support of per-root authz config
  * security fix: query.py requires 'forbidden' authorizer (or none) in config
  * fix URL-ification of truncated log messages (issue #3)