@@ -42,7 +42,6 @@ import rfc822
 import socket
 import select
 import base64
-import crypt
 import BaseHTTPServer
 
 if LIBRARY_DIR:
@@ -54,6 +53,19 @@ import sapi
 import viewvc
 import compat; compat.for_standalone()
 
+
+# The 'crypt' module is only available on Unix platforms.
+has_crypt = False
+try:
+  import crypt
+  has_crypt = True
+  def _check_passwd(user_passwd, real_passwd):
+    return real_passwd == crypt.crypt(user_passwd, real_passwd[:2])
+except ImportError:
+  has_crypt = False
+  def _check_passwd(user_passwd, real_passwd):
+    return False
+  
 
 class Options:
   port = 49152      # default TCP/IP port used for the server
@@ -182,7 +194,7 @@ class ViewVCHTTPRequestHandler(BaseHTTPServer.BaseHTTPRequestHandler):
       for line in lines:
         file_user, file_pass = string.split(line.rstrip(), ':', 1)
         if username == file_user:
-          return file_pass == crypt.crypt(password, file_pass[:2])
+          return _check_passwd(password, file_pass)
     except:
       pass
     return False
@@ -693,11 +705,27 @@ def cli(argv):
   import getopt
   class BadUsage(Exception): pass
 
+  short_opts = string.join(['c',
+                            'd:',
+                            'g',
+                            'h:',
+                            'p:',
+                            'r:',
+                            's:',
+                            ], '')
+  long_opts = ['daemon',
+               'config-file=',
+               'gui',
+               'host=',
+               'port=',
+               'repository=',
+               'script-alias=',
+               ]
+  if has_crypt:
+    long_opts.append('htpasswd-file=')
+    
   try:
-    opts, args = getopt.getopt(argv[1:], 'gdc:p:r:h:s:', 
-                               ['gui', 'daemon', 'config-file=', 'host=',
-                                'port=', 'repository=', 'script-alias=',
-                                'htpasswd-file='])
+    opts, args = getopt.getopt(argv[1:], short_opts, long_opts)
     for opt, val in opts:
       if opt in ('-g', '--gui'):
         options.start_gui = 1
@@ -785,14 +813,18 @@ Options:
                              "cgi-bin/viewvc", then ViewVC will be accessible
                              at "http://%(host)s:%(port)s/cgi-bin/viewvc".
                              [default: %(script_alias)s]
-  
-  --htpasswd-file=FILE       Demand authentication from clients, validating
-                             authentication credentials against Apache
-                             htpasswd file FILE.
 
   --gui (-g)                 Pop up a graphical interface for serving and
                              testing ViewVC.  NOTE: this requires a valid
                              X11 display connection.
+""" % locals())
+                             
+    if has_crypt:
+      sys.stderr.write("""
+                    
+  --htpasswd-file=FILE       Demand authentication from clients, validating
+                             authentication credentials against Apache
+                             htpasswd file FILE.
 """ % locals())
 
 if __name__ == '__main__':
